# opengl_demo

./: .gitignore  CMakeLists.txt
features/: gaussian_blur.cpp  gaussian_blur_core.cpp  gaussian_blur_core.h  gaussian_blur_demo.cpp  gaussian_blur_main.cpp
features/exports/: gaussian_blur_lib_export.cpp  gaussian_blur_lib_export.h
features/framebuffer/: FrameBuffer.cpp  FrameBuffer.h  glExtension.cpp  glExtension.h
resources/features_res/gaussain_bulr/: gauss_blur.fs  gauss_blur.vs  shader_gaussian_blur.fs  shader_gaussian_blur.fs.bk  texture.fs
tools/: rate_manager.h
